# CPP-Utext

./: CMakeLists.txt  README.md
3dparty/: CMakeLists.txt
app/: CMakeLists.txt  logFile.txt  main.cpp
app/resources/: myresource.qrc
app/resources/lang/: lang.qrc
app/resources/qss/: ConsoleStyle.qss  DarkSolarized.qss
app/src/: CMakeLists.txt  app.cpp  app.h  codeeditor.cpp  codeeditor.h  dialogsettings.cpp  dialogsettings.h  dialogsettings.ui  file_manager.cpp  file_manager.h  language.cpp  language.h  linenumberarea.h  listmodel.cpp  listmodel.h  loggingcategories.cpp  loggingcategories.h  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  mainwindow.ui.autosave  projectmanager.cpp  projectmanager.h  rope.cpp  rope.h  rope_node.cpp  rope_node.h  rope_tests.cpp  rope_tests.h  search.cpp  search.h  settings.cpp  settings.h  stylesyntaxhighlighter.cpp  stylesyntaxhighlighter.h  syntaxhighlightercxx.cpp  syntaxhighlightercxx.h  syntaxstyle.cpp  syntaxstyle.h  (+8 more)
dev/: listmodel.cpp  listmodel.h  projectmanager.cpp  rope_node.cpp  tabSetings.cpp  treeItem.h  treemodel.cpp  treemodel.h
